Working on Handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
-            <div class="col-md-4" id="burger-uneaten list"></div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4" id="burgers-eaten-list"></div>
+            <div class="col-md-12" id="burgerList">
+            </div>
+            
+            
