Functioning App. Requires formatting, refresh ability, exports for orm, and refactoring

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,8 +22,8 @@
             </div>
         </div>
         <div class="row">
-            {{{Body}}}
         </div>
+        {{{body}}}
         <div class="row">
             <div class="col-md-12">
                 <textarea rows="3" cols="37" id="burger-text" required placeholder="cheeseburger" maxlength="100" name="burger-name"></textarea>
