--- a/views/public/CSS/style.css
+++ b/views/public/CSS/style.css
@@ -7,3 +7,16 @@ body{
     height:20%;
     width:20%;
 }
+
+.devour-btn{
+    margin-top: 15%;
+}
+
+.not-eaten{
+    clear:both;
+}
+
+.eaten{
+    float:right;
+    opacity: 0.8;
+}
