--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,28 @@
-            <div class="col-md-12" id="burgerList">
+{{#each allBurgers}}
+   {{#unless devoured}}
+    <div class="row">
+        <div class="col-md-4">
+            <div class="jumbotron not-eaten">
+                {{burger_name}}
             </div>
-            
-            
+        </div>
+        <div class="col-md-4">
+            <button type="button" class="devour-btn" id="{{id}}">Devour It!</button>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+    {{else}}
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <button type="button" class="devour-btn" id="{{id}}">Devour It!</button>
+        </div>
+        <div class="col-md-4">
+            <div class="jumbotron eaten">
+                {{burger_name}}
+            </div>
+        </div>
+        </div>
+
+    {{/unless}}
+    {{/each}}
