Made Changes to be able handle delete functionality, Needs changing of methods, refactoring & formatting. Check instructions

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,12 +18,12 @@
         <div class="col-md-5"></div>
         <div class="col-md-2">
             <span class="input-group-btn">
-                <button class="btn btn-default devour-btn" type="button" id="{{id}}">Devour It!</button>
+               <button class="btn btn-default devour-btn" type="button" id="{{id}}">Devour It!</button>
             </span>
         </div>
         <div class="col-md-5">
             <ul class="list-group eaten">
-                <li class="list-group-item">{{burger_name}}</li>
+                <li class="list-group-item" id="burger-{{id}}">{{burger_name}}</li>
             </ul>
         </div>
         </div>
