Full Functioning App, Need to find out how to get render working without getcall()

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,9 +7,11 @@
             </ul>
         </div>
         <div class="col-md-2">
-            <span class="input-group-btn">
-                <button class="btn btn-default devour-btn" type="button" id="{{id}}">Devour It!</button>
-            </span>
+            <form method="POST" action="/index/update/{{id}}?_method=PUT">
+                <span class="input-group-btn">
+                    <button class="btn btn-default devour-btn" type="submit">Devour It!</button>
+                </span>
+            </form>
         </div>
         <div class="col-md-5"></div>
     </div>
@@ -17,9 +19,11 @@
     <div class="row">
         <div class="col-md-5"></div>
         <div class="col-md-2">
-            <span class="input-group-btn">
-               <button class="btn btn-default devour-btn" type="button" id="{{id}}">Devour It!</button>
-            </span>
+            <form method="POST" action="/index/delete/{{id}}?_method=DELETE">
+                <span class="input-group-btn">
+                    <button class="btn btn-default devour-btn" type="submit">Delete It!</button>
+                </span>
+            </form>
         </div>
         <div class="col-md-5">
             <ul class="list-group eaten">
