--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <div>Enter a burger you want to eat. Click the "Submit" button. Click on the devoured burger to delete it from the list.</div>
+                <div>Enter a burger you want to eat. Click the "Submit" button.</div>
             </div>
         </div>
     </div>
