--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
             </ul>
         </div>
         <div class="col-md-2">
-            <form method="POST" action="/index/update/{{id}}?_method=PUT">
+            <form method="POST" action="/update/{{id}}?_method=PUT">
                 <span class="input-group-btn">
                     <button class="btn btn-default devour-btn" type="submit">Devour It!</button>
                 </span>
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col-md-5"></div>
         <div class="col-md-2">
-            <form method="POST" action="/index/delete/{{id}}?_method=DELETE">
+            <form method="POST" action="/delete/{{id}}?_method=DELETE">
                 <span class="input-group-btn">
                     <button class="btn btn-default devour-btn" type="submit">Delete It!</button>
                 </span>
